# Nelux

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  benchmark_comparison.py  benchmark_pipelines.py  debug_quality.py  pyproject.toml  quality_comparison.py  test_ffmpeg_auto.py  test_ffmpeg_dll.py  test_float16_encoding.py  test_hevc_nvenc.py  test_wheel.py  test_with_dedup.py
.github/ISSUE_TEMPLATE/: BUGREPORT.yml  FEATUREREQ.yaml  SUPPORTREQ.yaml
.github/workflows/: benchmark_quality.yml  build_wheel.yml  createRelease.yaml
docs/: CHANGELOG.md  usage.md
examples/: basic_reader.py  batch_example.py  encode_from_reader.py  prefetch_example.py  reconfigure_example.py
include/Nelux/: BatchDecoder.hpp  CxCore.hpp  Factory.hpp  Frame.hpp  Logger.hpp
include/Nelux/backends/: Decoder.hpp  Decoders.hpp  Encoder.hpp
include/Nelux/backends/cpu/: Decoder.hpp
include/Nelux/backends/cuda/: Decoder.hpp  NV12ToRGB.cuh  RGBToNV12.cuh
include/Nelux/conversion/: Conversion.hpp  IConverter.hpp
include/Nelux/conversion/cpu/: AutoToRGB.hpp  CPUConverter.hpp  CPUConverters.hpp  RGBToAuto.hpp  RGBToAutoLibyuv.hpp
include/Nelux/conversion/gpu/: RGBToAutoGPU.hpp
include/Nelux/error/: CxException.hpp
include/Nelux/python/: VideoEncoder.hpp  VideoReader.hpp
nelux/: __init__.py  _nelux.pyi
nelux_local/: _celux.pyi  batch.py
src/Nelux/: BatchDecoder.cpp  FFmpegDelayLoad.cpp  Frame.cpp  Logger.cpp
src/Nelux/backends/: Decoder.cpp  Encoder.cpp
src/Nelux/backends/cuda/: Decoder.cpp  NV12ToRGB.cu  RGBToNV12.cu
src/Nelux/python/: Bindings.cpp  VideoEncoder.cpp  VideoReader.cpp
tests/: bench_seeking.py  benchmark_backend_speed.py  benchmark_libyuv.py  benchmark_quality.py  full_circuit_test.py  test_all_pixel_formats.py  test_backend.py  test_batch_support.py  test_color_difference.py  test_cuda_color_formats.py  test_cuda_pipeline.py  test_frame_at.py  test_get_item.py  test_nvdec_pix_fmts.py  test_nvenc.py  test_prefetch_api.py  test_reconfigure_api.py
tools/: download_ffmpeg.ps1  verify_cuda.py
