[build-system]
requires = ["scikit-build-core", "pybind11", "wheel", "torch"]
build-backend = "scikit_build_core.build"

[project]
name = "nelux"
version = "0.8.6"
readme = "README.md"
authors = [
    {name = "Nilas Tiago", email = "nilascontact@gmail.com"},
]
description = "Lightspeed video decoding directly into tensors!"
requires-python = ">=3.13"
license = {text = "AGPL-3.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
keywords = ["ffmpeg", "video", "ml", "pytorch", "decode", "tensors", "inference"]

[project.urls]
Homepage = "https://github.com/NevermindNilas/Nelux"
Repository = "https://github.com/NevermindNilas/Nelux"
Documentation = "https://github.com/NevermindNilas/Nelux/blob/master/README.md"
Changelog = "https://github.com/NevermindNilas/Nelux/blob/master/docs/CHANGELOG.md"
Issues = "https://github.com/NevermindNilas/Nelux/issues"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.verbose = true
ninja.make-fallback = false

[tool.scikit-build.cmake.define]
NELUX_ENABLE_CUDA = {env="NELUX_ENABLE_CUDA", default="OFF"}

